--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/5.5000-5999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/5.5000-5999-of-mysql-mode.md
@@ -102,14 +102,17 @@ ERROR 5050 (42710) : User exists
 
 * 解决方式：排查操作用户或角色是否已存在，或联系技术支持人员协助排查。
 
-ERROR 5053 (HY093) : Incorrect arguments number to EXECUTE, need %ld arguments but give %ld
-----------------------------------------------------------------------------------------------------------------
+## ERROR 5053 (HY093) : Incorrect arguments number to EXECUTE, need %ld arguments but give %ld
 
 * OceanBase 错误码：5053
 
 * 错误原因：EXECUTE 时绑定变量个数与 PREPARE 中参数个数不一样。
 
 * 解决方式：确保 EXECUTE 绑定变量个数与 PREPARE 需要的参数个数一样。
+
+相关问题处理 KB：
+
+* [游标执行失败，错误代码 5053](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000001059?back=kb)
 
 ERROR 5058 (42000) : Duplicated parameters
 ---------------------------------------------------------------
@@ -762,7 +765,10 @@ ERROR 5307 (HY000) : Not enough thread resource to execute the query. Require se
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>有关该系统变量的详细信息，请参见 OceanBase 数据库官方文档的 《参考指南（MySQL 模式）》中的系统变量章节。</p>
+    <ul>
+    <li> 该错误码在 V4.0.0 版本开始进行了修改，错误信息由 <code>ERROR 5307 (HY000) : Scheduler thread number is not enough </code> 调整为 <code>ERROR 5307 (HY000) : Not enough thread resource to execute the query. Require setting parallel_servers_target to a value no less than %ld for this query </code>。 </li>
+    <li> 有关该系统变量的详细信息，请参见 OceanBase 数据库官方文档的 《系统参考》中的系统变量章节。 </li>
+    </ul>
   </main>
   
 ERROR 5309 (HY000) : Ignore sql in restore process
@@ -1225,6 +1231,11 @@ ERROR 5403 (HY000) : ddl schema version not match
 
 * 解决方法：重新执行该 DDL。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 5409 (HY000) : Duplicate object name exists, schema refreshing may be hung
 
 * OceanBase 错误码：5409
@@ -1232,11 +1243,21 @@ ERROR 5403 (HY000) : ddl schema version not match
 
 * 解决方式：请联系技术支持人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ERROR 5410 (HY000) : Refresh schema failed continuously, ddl may be hung
 
 * OceanBase 错误码：5410
 * 错误原因：DDL 线程 Hung 住，无法接收新的 DDL 请求。
 * 解决方式：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ERROR 5434 (HY000) : retry sql due to spm
 -------------------------------------------------------------------------------------------------
@@ -1247,6 +1268,11 @@ ERROR 5434 (HY000) : retry sql due to spm
 
 * 解决方法：请联系技术支持人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ERROR 5435 (HY000) : outline not reproducible
 -------------------------------------------------------------------------------------------------
 
@@ -1255,6 +1281,11 @@ ERROR 5435 (HY000) : outline not reproducible
 * 错误原因：无法复现 Outline 指定的计划。
 
 * 解决方法：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ERROR 5436 (42000) : TIMESTAMP_TO_SCN expected timestamp argument
 -------------------------------------------------------------------------------------------------
@@ -1265,6 +1296,11 @@ ERROR 5436 (42000) : TIMESTAMP_TO_SCN expected timestamp argument
 
 * 解决方法：修改函数的参数。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ERROR 5437 (42000) : SCN_TO_TIMESTAMP expected a interger number as nsec argument
 -------------------------------------------------------------------------------------------------
 
@@ -1273,6 +1309,11 @@ ERROR 5437 (42000) : SCN_TO_TIMESTAMP expected a interger number as nsec argumen
 * 错误原因：参数类型不符合预期，SCN_TO_TIMESTAMP 函数传入的参数类型需要是整型。
 
 * 解决方法：修改函数的参数。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ERROR 5558 (42000) : %s \\'%.\*s.%.\*s\\' already exists
 -----------------------------------------------------------------------------
@@ -2130,14 +2171,17 @@ ERROR 5702 (HY000) : NULL or invalid user label: %s
 
 * 解决方式：指定正确的用户标签。
 
-ERROR 5703 (HY000) : Add index failed
-----------------------------------------------------------
+## ERROR 5703 (HY000) : Add index failed
 
 * OceanBase 错误码：5703
 
 * 错误原因：增加索引时失败。
 
 * 解决方式：尝试查看索引是否有效，可以先删除再创建。
+
+相关问题处理 KB：
+
+  [创建索引失败，错误代码 5703](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000001012?back=kb)
 
 ERROR 5704 (HY000) : profile %.\*s does not exist
 ----------------------------------------------------------------------
@@ -2892,14 +2936,17 @@ ERROR 5825 (HY000) : nfa has too many states in regular expression, may be the r
 
 * 解决方式：请联系技术支持人员协助排查。
 
-ERROR 5827 (HY000) : the definition of relative objects have been modified, please check and retry
------------------------------------------------------------------------------------------------------------------------
+## ERROR 5827 (HY000) : the definition of relative objects have been modified, please check and retry
 
 * OceanBase 错误码：5827
 
 * 错误原因：并发 DDL 遇到冲突。
 
 * 解决方式：内部错误码，请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+  [索引创建失败，错误码 5827](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000182?back=kb)
 
 ERROR 5828 (HY000) : Subscript beyond count
 ----------------------------------------------------------------
