--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
@@ -19,6 +19,11 @@ ERROR 6002 (25000) : Transaction idle timeout occurred, please rollback the tran
 
 * 兼容 MySQL 错误码：6002
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ERROR 6002 (25000) : transaction needs rollback
 --------------------------------------------------------------------
 
@@ -439,6 +444,11 @@ ERROR 6265 (HY000) : object lock does not exist
 
 * 解决方法：内部错误码。请联系技术人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ERROR 6266 (HY000) : object lock exists
 -------------------------------------------------------------
 
@@ -447,6 +457,11 @@ ERROR 6266 (HY000) : object lock exists
 * 错误原因：表锁相关，上锁时对应的锁操作已经存在，即重复上锁。
 
 * 解决方法：内部错误码。请联系技术人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ERROR 6267 (HY000) : Try lock object conflict
 ------------------------------------------------------------------
@@ -457,6 +472,11 @@ ERROR 6267 (HY000) : Try lock object conflict
 
 * 解决方法：预留错误码，暂未启用。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ERROR 6268 (HY000) : No log callbacks available
 --------------------------------------------------------------------
 
@@ -465,6 +485,11 @@ ERROR 6268 (HY000) : No log callbacks available
 * 错误原因：单个事务未回调的日志数量已经达到上限，无法继续提交日志。
 
 * 解决方法：重试，等待日志层回调。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ERROR 6275 (HY000) : object lock not completed, and can not unlock
 ----------------------------------------------------------------------------------------
@@ -475,6 +500,11 @@ ERROR 6275 (HY000) : object lock not completed, and can not unlock
 
 * 解决方法：内部错误码。请联系技术人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ERROR 6276 (HY000) : there is an unlock operation doing, unlock conflict
 ----------------------------------------------------------------------------------------------
 
@@ -483,6 +513,11 @@ ERROR 6276 (HY000) : there is an unlock operation doing, unlock conflict
 * 错误原因：DDL 解锁时，已经存在另外一个解锁操作，但是还未结束。
 
 * 解决方法：内部错误码。请联系技术人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ERROR 6277 (HY000) : scn is out of bounds of memtable
 ----------------------------------------------------------------------------------------------
@@ -493,17 +528,32 @@ ERROR 6277 (HY000) : scn is out of bounds of memtable
 
 * 解决方法：内部错误码。若回显为 ERROR，请联系技术支持人员协助排查；若回显为 WARN，则表示正常 。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 6280 (HY000) : Transaction cost too much without commit or rollback
 
 * OceanBase 错误码：6280
 * 错误原因：事务存活时间较长，行锁无法释放。
 * 解决方式：请分析业务场景判断长事务是否符合预期。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ERROR 6281 (HY000) : Transaction commit cost too much
 
 * OceanBase 错误码：6281
 * 错误原因：事务提交或者回滚耗时长，事务提交异常。
 * 解决方式：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误从 V4.1.0 版本开始引入。</p>
+</main>
 
 ERROR 6302 (HY000) : log scan runnable thread stop
 -----------------------------------------------------------------------
@@ -559,14 +609,17 @@ ERROR 6311 (HY000) : stream busy
 
 * 解决方式：内部错误码。请联系技术支持人员协助排查。
 
-ERROR 6312 (HY000) : file recycled
--------------------------------------------------------
+## ERROR 6312 (HY000) : file recycled
 
 * OceanBase 错误码：6312
 
 * 错误原因：内部错误。基于 `Index Log` 中记录的信息读取的 `CLog File` 已经被回收，会报该错误码。
 
 * 解决方式：内部错误码。请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+  [逻辑增量备份因大事务超时，错误代码 6312](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000078?back=kb)
 
 ERROR 6313 (HY000) : replay eagain cost too much time
 --------------------------------------------------------------------------
@@ -654,3 +707,8 @@ ERROR 6322 (HY000) : ob clog slide timeout
 * OceanBase 错误码：6400
 * 错误原因：分区级冻结。
 * 解决方式：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
