--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/8.8000-8999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/8.8000-8999-of-mysql-mode.md
@@ -45,3 +45,8 @@ ERROR 8004 (08004) : Packet cluster_id not match
 * 错误原因： 通过 Proxy 连接执行 SQL 的过程中，发生了租户改名。
 * 解决方式： 建议您在改租户名前断开 Proxy 连接，改完后重新连接。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
