--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/10.ora-50000-to-ora-99999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/10.ora-50000-to-ora-99999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-50000 ~ ORA-99999
-===========================================
+# ORA-50000 ~ ORA-99999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -84,6 +83,11 @@ ORA-54021：Cannot use PL/SQL expressions in partitioning or subpartitioning col
 
 * 错误原因：在包含 PL/SQL 表达式的虚拟列上对表进行分区。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-54023：Virtual column expression cannot be changed because a constraint is defined on column
 --------------------------------------------------------------------------------------------------------------------
 
@@ -105,6 +109,11 @@ ORA-54029：Virtual column cannot be updated in trigger body
 * 错误原因：更改触发器主体中虚拟列的值。
 
 * 解决方法：无效操作，需要更改触发器定义。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-54037：table must have at least 1
 column that is not virtual
@@ -235,3 +244,8 @@ ORA-64601：duplicate RESTART specified
 * SQLSTATE：42000
 * 错误原因：输入不能为 NULL。
 * 解决方法：提供输入参数。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
