--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/11.pls-00000-to-pls-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/11.pls-00000-to-pls-00999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-PLS-00000 ~ PLS-00999
-===========================================
+# PLS-00000 ~ PLS-00999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -169,6 +168,11 @@ PLS-00168：string'", "duplicate modifier specification '%s'
 
 * 解决方法：删除除一次之外的所有重复修改器。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00169：modifier '%s' conflicts with prior '%s' specification
 ------------------------------------------------------------------------------------
 
@@ -180,6 +184,11 @@ PLS-00169：modifier '%s' conflicts with prior '%s' specification
 
 * 解决方法：删除一个冲突的修饰符。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00172：string literal too long
 ------------------------------------------------------
 
@@ -190,6 +199,11 @@ PLS-00172：string literal too long
 * 错误原因：字符串文字长度超过 32767 字节。
 
 * 解决方法：使用最多 32767 字节的字符串文字。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00179：$ERROR: %.\*s
 --------------------------------------------
@@ -210,6 +224,11 @@ PLS-00182: Identifier cannot be an empty string
 * 错误原因：标识符是使用空字符串声明的。
 
 * 解决方法：将标识符重命名为非空字符串。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00201: identifier '%.\*s' must be
 declared
@@ -282,6 +301,11 @@ PLS-00221：%s' is not a procedure or is undefined
 
 * 解决方法：检查标识符的拼写和声明。还要确认声明已正确放置在块结构中。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00222：no function with name '%.\*s' exists in this scope
 ---------------------------------------------------------------------------------
 
@@ -292,6 +316,11 @@ PLS-00222：no function with name '%.\*s' exists in this scope
 * 错误原因：被引用为函数的标识符未被声明或实际代表其他对象（例如，它可能已被声明为过程）。
 
 * 解决方法：检查标识符的拼写和声明。还要确认声明已正确放置在块结构中。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00225：subprogram or cursor '%.\*s' reference is out of scope
 -------------------------------------------------------------------------------------
@@ -304,19 +333,22 @@ PLS-00225：subprogram or cursor '%.\*s' reference is out of scope
 
   * 合法使用函数"f"作为范围限定符
 
-  * 在 `"f". x := f().a;` 函数中解析局部变量"a"
+    * 在 `x := f().a;` 函数中解析局部变量"a"
 
-  * 对返回记录端的组件"a"的合法引用；`begin x := f.a;`
+    * 对返回记录端的组件"a"的合法引用；
 
-  * 非法使用函数"f"作为范围限定符 `x :=f().a;`
-
-  * 对返回记录端的组件"a"的合法引用
+  * 非法使用函数"f"作为范围限定符 `x :=f().a;`，对返回记录端的组件"a"的合法引用
 
 * 解决方法：
 
   * 如果意图是引用非封闭函数的局部变量，则不允许这样做，删除引用。
 
   * 如果这是一个无参数函数，并且目的是访​​问对该函数的调用结果的字段，则在调用中使用空括号。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00227：subprogram 'in' formal %.\*s is not yet denotable
 --------------------------------------------------------------------------------
@@ -329,6 +361,11 @@ PLS-00227：subprogram 'in' formal %.\*s is not yet denotable
 
 * 解决方法：删除非法的形式参数引用。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00230：OUT and IN OUT formal parameters may not have default expressions
 ------------------------------------------------------------------------------------------------
 
@@ -340,6 +377,11 @@ PLS-00230：OUT and IN OUT formal parameters may not have default expressions
 
 * 解决方法：删除非法的默认表达式。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00231：function '%.\*s' may not be used in SQL
 ----------------------------------------------------------------------
 
@@ -350,6 +392,11 @@ PLS-00231：function '%.\*s' may not be used in SQL
 * 错误原因：SQL 语句中使用了一个被禁止的函数。某些函数，如 `SQLCODE` 和 `SQLERRM`，只能在过程语句中使用。
 
 * 解决方法：从 SQL 语句中删除函数调用。或者用局部变量替换函数调用。例如，以下语句是非法的：`INSERT INTO errors VALUES（SQLCODE，SQLERRM）；` 但您可以将 `SQLCODE` 和 `SQLERRM` 的值分配给局部变量，然后使用 SQL 语句中的变量，如下所示：`err_num:=SQLCODE；err_msg:=SQLERRM；` 插入错误值 `（err_num、err_msg）；` 。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00254：OUT and IN/OUT modes cannot
 be used in this context
@@ -374,6 +421,11 @@ PLS-00263：mismatch between string on a subprogram specification and body
 
 * 解决方法：修改子程序体上的条款，以符合规范错误，直到为外部程序预留 300 个 PH2 错误。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00301：Invalid GOTO to non-label '%.\*s'
 ----------------------------------------------------------------
 
@@ -385,6 +437,11 @@ PLS-00301：Invalid GOTO to non-label '%.\*s'
 
 * 解决方法：指定有效的标签名称。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00302：component '%.\*s' must be declared
 -----------------------------------------------------------------
 
@@ -395,6 +452,11 @@ PLS-00302：component '%.\*s' must be declared
 * 错误原因：在对组件的引用中（例如，在名称"a.B"中，"B"是"a"的组件），该组件尚未声明。组件可能拼写错误，其声明可能有错误，或者声明可能在块结构中放置不正确。
 
 * 解决方法：检查组件的拼写和声明。还要确认声明已正确放置在块结构中。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00304：cannot compile body of
 '%.\*s' without its specification
@@ -501,6 +563,11 @@ PLS-00310：with %%ROWTYPE attribute, '%.\*s' must name a table, cursor or curso
 
 * 解决方式：更改声明或不对标识符应用 `%ROWTYPE` 属性。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00312：a positional parameter association may not follow a named association
 ----------------------------------------------------------------------------------------------------
 
@@ -511,6 +578,11 @@ PLS-00312：a positional parameter association may not follow a named associatio
 * 错误原因：将参数列表传递给子程序或游标时，如果同时使用位置关联和命名关联，则所有位置关联都必须按其声明的顺序放置在所有命名关联之前，可以是任何顺序。
 
 * 解决方式：重新排序参数列表以满足要求或仅使用命名关联。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00315：Implementation restriction: unsupported table index type
 ---------------------------------------------------------------------------------------
@@ -523,6 +595,11 @@ PLS-00315：Implementation restriction: unsupported table index type
 
 * 解决方式：在 `INDEX BY` 子句中使用受支持的键类型之一。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00316：PL/SQL TABLEs must use a single index
 --------------------------------------------------------------------
 
@@ -533,6 +610,11 @@ PLS-00316：PL/SQL TABLEs must use a single index
 * 错误原因：在 PL/SQL 表声明的 `INDEX BY` 子句中，指定了复合主键。PL/SQL 表必须具有二进制整数或 VARCHAR2 类型的简单未命名主键。
 
 * 解决方式：在 `INDEX BY` 子句中使用受支持的键类型之一。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00318：type '%.\*s' is malformed because it is a non-REF mutually recursive
 type
@@ -622,6 +704,11 @@ PLS-00328：A subprogram body must be defined for the forward declaration of %.\
 
 * 解决方法：检查子程序名称的拼写。如有必要，提供缺失的子程序体。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00329：schema-level type has illegal reference to %.\*s
 -------------------------------------------------------------------------------
 
@@ -632,6 +719,11 @@ PLS-00329：schema-level type has illegal reference to %.\*s
 * 错误原因：从 schema 级别类型引用到 schema 级别类型以外的其他类型。
 
 * 解决方法：替换非法引用，然后重试该操作。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00357：Table,View Or Sequence reference '%s%s%s%s%s' not allowed in this context
 --------------------------------------------------------------------------------------------------------
@@ -644,6 +736,11 @@ PLS-00357：Table,View Or Sequence reference '%s%s%s%s%s' not allowed in this co
 
 * 解决方法：删除或重新定位非法引用。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00360：cursor declaration without body needs return type
 --------------------------------------------------------------------------------
 
@@ -654,6 +751,11 @@ PLS-00360：cursor declaration without body needs return type
 * 错误原因：游标声明缺少主体（ `SELECT` 语句）或返回类型。如果要将游标规范与其主体分离，则必须提供返回类型，如：`CURSOR c1 RETURN emp%ROWTYPE;`。
 
 * 解决方法：向游标声明中添加 `SELECT` 语句或返回类型。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00361：IN cursor '%.\*s' cannot be OPEN'ed
 ------------------------------------------------------------------
@@ -666,6 +768,11 @@ PLS-00361：IN cursor '%.\*s' cannot be OPEN'ed
 
 * 解决方法：将光标参数更改为 `IN-OUT` 或 `OUT`。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00362：invalid cursor return type; '%.\*s' must be a record type
 ----------------------------------------------------------------------------------------
 
@@ -676,6 +783,11 @@ PLS-00362：invalid cursor return type; '%.\*s' must be a record type
 * 错误原因：在游标规范或 REF 游标类型定义中，非记录类型（如：NUMBER 或 TABLE）被指定为返回类型。这是不允许的。只允许以下返回类型：`<record_type_name><record_name>%type<table_name>%ROWTYPE<cursor_name>%ROWTYPE<cursor_variable_name>%ROWTYTPE`。
 
 * 解决方法：修改游标规范或引用游标类型定义，使其指定上述返回类型之一。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00363：expression '%.\*s' cannot be used as an assignment
 ---------------------------------------------------------------------------------
@@ -710,6 +822,11 @@ PLS-00367：a RAISE statement with no exception name must be inside an exception
 
 * 解决方法：删除 RAISE 语句，将其重新定位到异常处理程序，或提供缺少的异常名称。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 PLS-00369：no choices may appear with choice OTHERS in an exception handler
 -----------------------------------------------------------------------------------------------
 
@@ -717,9 +834,14 @@ PLS-00369：no choices may appear with choice OTHERS in an exception handler
 
 * SQLSTATE：HY000
 
-* 错误原因：在异常处理程序的定义中遇到 `excep1` 或 `OTHERS=>` 时的表单构造。`OTHERS` 处理程序必须作为块中的最后一个异常处理程序单独出现。
+* 错误原因：在异常处理程序的定义中遇到 `WHEN excep1 OR OTHERS` 形式的表单构造。`OTHERS` 处理程序必须作为块中的最后一个异常处理程序单独出现。
 
 * 解决方法：删除与其他标识符一起出现的标识符，或为该标识符编写单独的异常处理程序。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00370：OTHERS handler must be last among the exception handlers of a block
 --------------------------------------------------------------------------------------------------
@@ -731,6 +853,11 @@ PLS-00370：OTHERS handler must be last among the exception handlers of a block
 * 错误原因：一个或多个异常处理程序出现在其他处理程序之后。`OTHERS` 处理程序必须是块或子程序中的最后一个处理程序，因为它充当所有未具体命名的异常的处理程序。
 
 * 解决方法：移动 `OTHERS` 处理程序，使其遵循所有特定的异常处理程序。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00371：at most one declaration for
 '%.\*s' is permitted
@@ -813,6 +940,11 @@ PLS-00386：type mismatch found at '%.\*s' between FETCH cursor and INTO variabl
 
 * 解决方法：更改游标声明或更改分配目标的数据类型。您可能希望在与游标关联的查询的选择列表中使用数据类型转换函数。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00394：wrong number of values in the INTO list of a FETCH statement
 -------------------------------------------------------------------------------------------
 
@@ -824,6 +956,11 @@ PLS-00394：wrong number of values in the INTO list of a FETCH statement
 
 * 解决方法：更改 `INTO` 子句中的变量数或游标声明中的列数，以便数字匹配。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00402：alias required in SELECT list of cursor to avoid duplicate column names
 ------------------------------------------------------------------------------------------------------
 
@@ -834,6 +971,11 @@ PLS-00402：alias required in SELECT list of cursor to avoid duplicate column na
 * 错误原因：游标是用包含重复列名的 `SELECT` 语句声明的。
 
 * 解决方法：用别名替换"选择"列表中重复的列名。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00403：expression '%.\*s' cannot be used as an INTO-target of a SELECT/FETCH statement
 --------------------------------------------------------------------------------------------------------------
@@ -856,6 +998,11 @@ PLS-00404：cursor '%.*s' must be declared with FOR UPDATE to use with CURRENT O
 * 错误原因：`CURRENT OF cursor_name` 子句中 `cursor_name` 没有在 `FOR UPDATE` 子句中声明过。
 
 * 解决方法：在游标定义中添加 `FOR UPDATE` 子句或不使用 `CURRENT OF cursor_name` 子句。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 PLS-00410：duplicate fields in
 RECORD,TABLE or argument list are not permitted
@@ -880,6 +1027,11 @@ PLS-00413：identifier in CURRENT OF clause is not a cursor name
 
 * 解决方法：检查标识符的拼写。 确保该标识符在 `DELETE` 或 `UPDATE` 语句中的命名是游标，并且命名的是游标本身，而不是 FOR 循环变量。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 PLS-00428：an INTO clause is expected in this SELECT statement
 ----------------------------------------------------------------------------------
 
@@ -890,6 +1042,11 @@ PLS-00428：an INTO clause is expected in this SELECT statement
 * 错误原因：`SELECT INTO` 语句的 `INTO` 子句被省略。例如，代码类似 `SELECT deptno, dname, loc FROM dept WHERE ... instead of SELECT deptno, dname, loc INTO dept_rec FROM dept WHERE ...`。在 PL/SQL 中，只有子查询没有 `INTO` 子句。
 
 * 解决方法：添加 `required INTO` 子句。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00430：FORALL iteration variable %.\*s is not allowed in this context
 ---------------------------------------------------------------------------------------------
@@ -902,6 +1059,11 @@ PLS-00430：FORALL iteration variable %.\*s is not allowed in this context
 
 * 解决方法：仅将 `FORALL` 变量用作集合下标。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00432：implementation restriction: cannot use FORALL and BULK COLLECT INTO together in SELECT statements
 --------------------------------------------------------------------------------------------------------------------------------
 
@@ -913,6 +1075,11 @@ PLS-00432：implementation restriction: cannot use FORALL and BULK COLLECT INTO 
 
 * 解决方法：不能在 `SELECT` 语句中同时使用 `FORALL` 和 `BULK COLLET INTO` 短语。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00435：DML statement without BULK In-BIND cannot be used inside FORALL
 ----------------------------------------------------------------------------------------------
 
@@ -923,6 +1090,11 @@ PLS-00435：DML statement without BULK In-BIND cannot be used inside FORALL
 * 错误原因：`FORALL` 语句中的 DML（ `SELECT/INSERT/DELETE/UPDATE` ）语句不包含 `BULK IN-BIND` 变量。
 
 * 解决方法：`FORALL` 语句中的 DML（ `SELECT/INSERT/DELETE/UPDATE` ）语句必须包含 `BULK IN-BIND` 变量。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00438：value in LIMIT clause
 \\'%.\*s\\' use is invalid
@@ -948,6 +1120,11 @@ PLS-00439：A LIMIT clause must be used within a BULK FETCH
 
 * 解决方法：当使用非批量提取时，不要使用 `LIMIT` 子句。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00441：EXIT/CONTINUE statement may have a label here; '%.\*s' is not a label
 ----------------------------------------------------------------------------------------------------
 
@@ -958,6 +1135,11 @@ PLS-00441：EXIT/CONTINUE statement may have a label here; '%.\*s' is not a labe
 * 错误原因：指定的名称不是标签。`EXIT` 或 `CONTINUE` 语句不需要标签，但当出现可选名称时，它必须是标签。
 
 * 解决方法：检查名字的拼写。确保名称是嵌套 `EXIT` 或 `CONTINUE` 语句的循环的标签。如果此语句不需要标签，请删除名称。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00452：Subprogram '%.\*s' violates its associated pragma
 --------------------------------------------------------------------------------
@@ -970,6 +1152,11 @@ PLS-00452：Subprogram '%.\*s' violates its associated pragma
 
 * 解决方法：提高函数的纯度级别，或放宽 pragma 限制。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00455：cursor '%.\*s' cannot be used in dynamic SQL OPEN statement
 ------------------------------------------------------------------------------------------
 
@@ -981,6 +1168,11 @@ PLS-00455：cursor '%.\*s' cannot be used in dynamic SQL OPEN statement
 
 * 解决方法：定义一个不带返回类型的 REF 游标，并在语句中使用它。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00457：expressions have to be of SQL types
 ------------------------------------------------------------------
 
@@ -991,6 +1183,11 @@ PLS-00457：expressions have to be of SQL types
 * 错误原因：`USING` 或 `dynamic RETURNING` 子句中存在错误类型的表达式。在 `USING` 或 `dynamic RETURNING` 子句中，表达式不能是非 SQL 类型，例如布尔、索引表和记录。
 
 * 解决方法：将表达式类型更改为 SQL 类型。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00485：in exception handler, '%.\*s' must be an exception name
 --------------------------------------------------------------------------------------
@@ -1031,6 +1228,11 @@ PLS-00491：numeric literal required
 
 * 解决方式：将标识符替换为数值常量。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00492：variable or constant initialization may not refer to functions declared in the same package
 --------------------------------------------------------------------------------------------------------------------------
 
@@ -1041,6 +1243,11 @@ PLS-00492：variable or constant initialization may not refer to functions decla
 * 错误原因：如果一个包 `spec p` 声明了一个函数 `f`，那么该函数在任何情况下都不能使用同一个包规范中的变量声明。这是因为循环实例化问题：为了完全实例化包规范，必须初始化变量。要初始化变量，包体中的函数体代码必须为执行。这要求对包体进行实例化。然而，一揽子计划在包规范完全实例化之前，无法实例化包体。
 
 * 解决方式：从变量初始化中删除对函数的引用。一种常用的技术是将变量初始化从变量声明（在包规范中）移动到包体初始化块。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00497：cannot mix between single row and multi-row (BULK) in INTO list
 ----------------------------------------------------------------------------------------------
@@ -1057,6 +1264,11 @@ PLS-00497：cannot mix between single row and multi-row (BULK) in INTO list
 
 * 解决方式：更改 `INTO` 列表以便所有变量都具有正确的数据类型
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00503：RETURN value statement required for this return from function
 --------------------------------------------------------------------------------------------
 
@@ -1067,6 +1279,11 @@ PLS-00503：RETURN value statement required for this return from function
 * 错误原因：在函数体中，使用了不包含表达式的返回语句。在过程中，`RETURN` 语句不包含表达式，因为该语句只是将控制权返回给调用方。但在函数中，`RETURN` 语句必须包含表达式，因为它的值被分配给函数标识符。
 
 * 解决方式：在 `RETURN` 语句中添加一个表达式。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00520：MAP methods must be
 declared without any parameters other than (optional) SELF
@@ -1191,6 +1408,11 @@ PLS-00530：Illegal type used for object type attribute: '%.\*s'
 
 * 解决方法：仅对对象类型属性使用支持的类型。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00531：Unsupported type in a VARRAY or TABLE type: '%.\*s'
 -----------------------------------------------------------------------------------
 
@@ -1201,6 +1423,11 @@ PLS-00531：Unsupported type in a VARRAY or TABLE type: '%.\*s'
 * 错误原因：试图在 `VARRAY` 或 `TABLE type` 中使用不受支持的类型。
 
 * 解决方法：仅在 `VARRAY` 或 `TABLE type` 中使用受支持的类型。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00537：A VARRAY must have a positive limit
 ------------------------------------------------------------------
@@ -1249,6 +1476,11 @@ PLS-00551：character set ANY_CS is only allowed on a subprogram parameter
 
 * 解决方法：更改或删除字符集规范。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00566：type name '%.\*s' cannot be constrained
 ----------------------------------------------------------------------
 
@@ -1259,6 +1491,11 @@ PLS-00566：type name '%.\*s' cannot be constrained
 * 错误原因：lob、date、boolean、rowid 或 mlslabel 类型受长度规范约束。例如：`X BLOB（5）；`。
 
 * 解决方法：移除约束。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00567：cannot pass NULL to a NOT NULL constrained formal parameter
 ------------------------------------------------------------------------------------------
@@ -1271,6 +1508,11 @@ PLS-00567：cannot pass NULL to a NOT NULL constrained formal parameter
 
 * 解决方法：传递一个非空表达式。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00572：improper constraint form used
 ------------------------------------------------------------
 
@@ -1282,6 +1524,11 @@ PLS-00572：improper constraint form used
 
 * 解决方法：移除约束。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00586：a static method cannot declare a parameter named SELF
 ------------------------------------------------------------------------------------
 
@@ -1292,6 +1539,11 @@ PLS-00586：a static method cannot declare a parameter named SELF
 * 错误原因：在声明静态方法时，将参数命名为 `SELF`。`SELF` 在方法中保留为参数名，用于保存应用该方法的对象实例。静态方法中不允许使用名为 `SELF` 的参数，因为静态方法不适用于特定的对象实例。
 
 * 解决方法：更改声明中参数的名称。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00587：a static method cannot be
 invoked on an instance value
@@ -1316,6 +1568,11 @@ PLS-00589：no attributes found in object type '%.\*s'
 
 * 解决方法：类型的表格应仅为 ADT 类型
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00593：default value of parameter '%.\*s' in body must match that of spec
 -------------------------------------------------------------------------------------------------
 
@@ -1326,6 +1583,11 @@ PLS-00593：default value of parameter '%.\*s' in body must match that of spec
 * 错误原因：包体中包含的子程序体中参数的默认值初始化与相应包规范中相应子程序规范的默认值初始化不匹配。
 
 * 解决方法：更改包体中参数的默认初始化以匹配 `spec` 的初始化。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00597：expression '%.\*s' in the INTO list is of wrong type
 -----------------------------------------------------------------------------------
@@ -1343,6 +1605,11 @@ PLS-00597：expression '%.\*s' in the INTO list is of wrong type
   * 一条记录或一组记录用于 `BULK COLLECT INTO` 。
 
 * 解决方法：在 `INTO` 子句中使用数据类型正确的表达式。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00594：the SELF parameter can be
 declared only as IN or as IN OUT
@@ -1367,6 +1634,11 @@ PLS-00617：at least one result in the CASE expression must not be NULL
 
 * 解决方法：将 `CASE` 表达式中的至少一个结果更改为非 `NULL`。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00619：the first operand in the NULLIF expression must not be NULL
 ------------------------------------------------------------------------------------------
 
@@ -1377,6 +1649,11 @@ PLS-00619：the first operand in the NULLIF expression must not be NULL
 * 错误原因：`NULLIF` 表达式中的第一个操作数是文本 `NULL`。
 
 * 解决方法：将 `NULLIF` 表达式中的第一个操作数更改为 `non-NULL`。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00621：at least one operand in the COALESCE expression must not be NULL
 -----------------------------------------------------------------------------------------------
@@ -1400,6 +1677,11 @@ PLS-00629：PIPE statement cannot be used in non-pipelined functions
 
 * 解决方法：仅在流水线函数中使用 `PIPE` 语句。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00630：pipelined functions must have a supported collection return type
 -----------------------------------------------------------------------------------------------
 
@@ -1419,6 +1701,11 @@ PLS-00630：pipelined functions must have a supported collection return type
   
 * 解决方法：将支持的集合类型指定为流水线函数返回类型。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00633：RETURN statement in a pipelined function cannot contain an expression
 ----------------------------------------------------------------------------------------------------
 
@@ -1429,6 +1716,11 @@ PLS-00633：RETURN statement in a pipelined function cannot contain an expressio
 * 错误原因：管道函数中的 `RETURN` 语句包含表达式，这是不允许的。流水线函数必须使用 `PIPE` 语句将值发回调用方。
 
 * 解决方法：从 `RETURN` 语句中删除表达式，并使用 `PIPE` 语句返回值。否则，将函数转换为非流水线函数。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00642：local collection types not allowed in SQL statements
 -----------------------------------------------------------------------------------
@@ -1452,6 +1744,11 @@ PLS-00652：incorrect number of arguments for aggregate function
 
 * 解决方法：不要创建参数为 `0` 或超过 `999` 的聚合函数。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00655：only functions can be declared as PIPELINED
 --------------------------------------------------------------------------
 
@@ -1463,6 +1760,11 @@ PLS-00655：only functions can be declared as PIPELINED
 
 * 解决方式：将语句类型修改为 FUNCTION，或者去掉 PIPELINED 的使用。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00657：Implementation restriction: bulk SQL with associative arrays with VARCHAR2 key is not supported
 -------------------------------------------------------------------------------------------------------------------------------
 
@@ -1473,6 +1775,11 @@ PLS-00657：Implementation restriction: bulk SQL with associative arrays with VA
 * 错误原因：关联数组类型的变量或表达式用作批量 SQL 绑定或定义。
 
 * 解决方法：使用大容量 SQL 支持的 collection 类型。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00658：constructor method name
 must match type name
@@ -1497,6 +1804,11 @@ PLS-00659：constructor method must return SELF AS RESULT
 
 * 解决方式：将 `return` 子句更改为包含 `return SELF` 作为结果。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00660：SELF parameter of constructor method must be IN OUT
 ----------------------------------------------------------------------------------
 
@@ -1507,6 +1819,11 @@ PLS-00660：SELF parameter of constructor method must be IN OUT
 * 错误原因：构造函数的 `SELF` 参数的模式不是 `IN OUT`。
 
 * 解决方式：将 `SELF` 参数的模式更改为 `IN OUT`。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00661：RETURN statement in a CONSTRUCTOR cannot include an expression
 ---------------------------------------------------------------------------------------------
@@ -1530,6 +1847,11 @@ PLS-00667：Element type of associative array should be pls_integer or binary_in
 
 * 解决方式：将索引集合变量类型更改为元素类型为 `pls_integer` 或 `binary_integer` 的关联数组。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00668：Type of expression should be a collection type
 -----------------------------------------------------------------------------
 
@@ -1541,6 +1863,11 @@ PLS-00668：Type of expression should be a collection type
 
 * 解决方式：将索引集合表达式类型更改为有效的集合类型。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00674：references to fields of BULK In-BIND table of records or objects must have the form A(I).F
 -------------------------------------------------------------------------------------------------------------------------
 
@@ -1548,9 +1875,14 @@ PLS-00674：references to fields of BULK In-BIND table of records or objects mus
 
 * SQLSTATE：HY000
 
-* 错误原因：表单表（批量索引）。字段是运行时支持的唯一字段选择。
+* 错误原因：表单 table(bulk_index).field 是运行时唯一支持的字段选择。
 
 * 解决方式：使用 `FOR` 循环代替 `FORALL DML` 语句（`MERGE/INSERT/DELETE/UPDATE`），或者修改引用以适应允许的形式。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00675：invalid section for this type of Compound Trigger
 -------------------------------------------------------------------------------------------------------------------------
@@ -1563,6 +1895,11 @@ PLS-00675：invalid section for this type of Compound Trigger
 
 * 解决方式：如果组合触发器基于视图创建，只能定义 Instead of 触发事件，如果基于表定义，只能定义 Instead of 触发事件以外的事件。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00676：duplicate Compound Triggers section
 -------------------------------------------------------------------------------------------------------------------------
 
@@ -1573,6 +1910,11 @@ PLS-00676：duplicate Compound Triggers section
 * 错误原因：每个 Compound 触发器部分最多只能在 Compound 触发器的主体中出现一次。
 
 * 解决方式：删除有问题的部分。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00701：illegal ORACLE error number %.\*s for PRAGMA EXCEPTION_INIT
 ------------------------------------------------------------------------------------------
@@ -1607,6 +1949,11 @@ PLS-00708：Pragma %.\*s must be declared in a package specification
 
 * 解决方式：删除或重新定位放错位置的 pragma。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00709：pragma %.\*s must be declared in package specification and body
 ----------------------------------------------------------------------------------------------
 
@@ -1617,6 +1964,11 @@ PLS-00709：pragma %.\*s must be declared in package specification and body
 * 错误原因：命名的 `pragma` 在包规范中声明，但不在相应的包体中声明，反之亦然，也不在包体中声明。
 
 * 解决方式：将 `pragma` 添加到包声明中没有 `pragma` 的部分。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00710：Pragma string cannot be specified here", "Pragma %s cannot be specified here
 -----------------------------------------------------------------------------------------------------------
@@ -1629,6 +1981,11 @@ PLS-00710：Pragma string cannot be specified here", "Pragma %s cannot be specif
 
 * 解决方法：检查程序名称是否拼写正确。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00711：PRAGMA string cannot be declared twice", "PRAGMA %.\*s cannot be declared twice
 --------------------------------------------------------------------------------------------------------------
 
@@ -1639,6 +1996,11 @@ PLS-00711：PRAGMA string cannot be declared twice", "PRAGMA %.\*s cannot be dec
 * 错误原因：`PRAGMA` 在同一块中声明了两次。
 
 * 解决方式：删除 `PRAGMA` 的重复声明。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00712：illegal option for subprogram %.\*s
 ------------------------------------------------------------------
@@ -1651,6 +2013,11 @@ PLS-00712：illegal option for subprogram %.\*s
 
 * 解决方式：删除该选项。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00742：field %.\*s is not yet denotable
 ---------------------------------------------------------------
 
@@ -1662,6 +2029,11 @@ PLS-00742：field %.\*s is not yet denotable
 
 * 解决方式：删除非法的字段引用。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 PLS-00904：insufficient privilege to access object string
 -----------------------------------------------------------------------------
 
@@ -1672,6 +2044,11 @@ PLS-00904：insufficient privilege to access object string
 * 错误原因：在没有所需权限的情况下对数据库对象进行操作。例如，如果试图更新仅授予 `SELECT` 权限的表，或者数据库对象的 `ACCESS BY` 子句禁止尝试编译，则会发生此错误。
 
 * 解决方式：请 DBA 执行操作或授予您所需的权限。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00905：object '%.\*s' is invalid
 --------------------------------------------------------
@@ -1694,6 +2071,11 @@ PLS-00990：Index Tables of Cursor Variables are disallowed
 * 错误原因：cursor 不支持 作为 array 类型的项。
 
 * 解决方法：检查 array 类型的项的类型，避免使用 cursor 类型。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 PLS-00994：Cursor Variables cannot be
 declared as part of a package
@@ -1739,3 +2121,8 @@ PLS-00999：implementation restriction (may be temporary) %s
   * RESULT_CACHE 不支持 PIPELINE FUNCTION 和 NESTED FUNCTION
 
 * 解决方法：去掉在上述不支持情况中使用的 RESULT_CACHE
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
