--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-00000 ~ ORA-00999
-===========================================
+# ORA-00000 ~ ORA-00999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -84,6 +83,11 @@ ORA-00036：maximum number of recursive SQL levels (%ld) exceeded
 
 * 解决方式：删除递归 SQL 或者递归触发器。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-00051：timeout occurred while waiting for a resource
 ----------------------------------------------------------------------------
 
@@ -111,6 +115,11 @@ ORA-00054：resource busy and acquire with NOWAIT specified or timeout expired
 * OceanBase 错误码：5488
 * SQLSTATE：HY000
 * 错误原因：%s 调用的参数无效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ORA-00060：deadlock detected while waiting for resource
 ---------------------------------------------------------------------------
@@ -325,6 +334,11 @@ ORA-00600：A path expression is not a path to a cell in an array
 * 错误原因：在谓词外部使用了 JSON_EQUAL。
 * 解决方法：在谓词中使用 JSON_EQUAL，例如将其嵌入 CASE 表达式中。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ORA-00600：auto increment service busy
 ----------------------------------------------------------
 
@@ -364,11 +378,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：二进制几何函数给出了两个不同 Srids : %u and %u，它们应该是相同的。作为参数传递给空间函数的几何值必须具有相同的 SRID 值。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Calling geometry function with unsupported types of arguments.Calling geometry function %s with unsupported types of arguments
 
 * OceanBase 错误码：7202
 * SQLSTATE：HY000
 * 错误原因：使用不支持的参数类型调用几何函数  %s。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Unknown GIS error occurred in function.Unknown GIS error occurred in function %s
 
@@ -376,11 +400,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：函数 %s 中发生未知的 GIS 错误。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Unknown exception caught in GIS function.Unknown exception caught in GIS function %s
 
 * OceanBase 错误码：7204
 * SQLSTATE：HY000
 * 错误原因：GIS 函数 %s 中捕获到未知异常。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Invalid GIS data provided to function.Invalid GIS data provided to function %s
 
@@ -388,11 +422,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22023
 * 错误原因：提供给函数 %s 的无效 GIS 数据。使用未识别为有效几何值的参数调用空间函数。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The geometry has no data in function.The geometry has no data in function %s
 
 * OceanBase 错误码：7206
 * SQLSTATE：HY000
 * 错误原因：几何在函数 %s 中没有数据。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Unable to calculate centroid because geometry is empty in function.Unable to calculate centroid because geometry is empty in function %s
 
@@ -400,11 +444,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：无法计算质心，因为函数 %s 中的几何图形为空。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Geometry overlay calculation error: geometry data is invalid in function.Geometry overlay calculation error: geometry data is invalid in function %s
 
 * OceanBase 错误码：7208
 * SQLSTATE：HY000
 * 错误原因：几何叠加计算错误，函数 %s 中的几何数据无效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Geometry turn info calculation error: geometry data is invalid in function.Geometry turn info calculation error: geometry data is invalid in function %s
 
@@ -412,11 +466,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：几何转向信息计算错误，几何数据在函数 %s 中无效。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Analysis procedures of intersection points interrupted unexpectedly in function.Analysis procedures of intersection points interrupted unexpectedly in function %s
 
 * OceanBase 错误码：7210
 * SQLSTATE：HY000
 * 错误原因：交点分析过程在函数 %s 中意外中断。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Unknown exception thrown in function.Unknown exception thrown in function %s
 
@@ -424,11 +488,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：函数 %s 中抛出的未知异常。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Geometry byte string must be little endian
 
 * OceanBase 错误码：7212
 * SQLSTATE：HY000
 * 错误原因：几何字节字符串必须是小端序。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Do not support online operation on table with GIS index
 
@@ -436,11 +510,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：不支持对具有 GIS 索引的表进行在线操作。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Inconsistent intersection points.Inconsistent intersection points
 
 * OceanBase 错误码：7214
 * SQLSTATE：HY000
 * 错误原因：不一致的交叉点。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Parameter exceeds the maximum number of points in a geometryin function.Parameter %s exceeds the maximum number of points in a geometry (%lu) in function %s
 
@@ -448,11 +532,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：参数 %s 超过函数 %s 中几何图形 (%lu) 的最大点数。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：value is a geometry of unexpected type.%.64s value is a geometry of unexpected type %.64s in %.64s
 
 * OceanBase 错误码：7216
 * SQLSTATE：22S01
 * 错误原因：%s 值是 %s 中意外类型 %s 的几何图形。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Can\'t parse the spatial reference system definition of SRID.Can\'t parse the spatial reference system definition of SRID %u
 
@@ -460,11 +554,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR002
 * 错误原因：无法解析 SRID %u 的空间参考系统定义。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The spatial reference system definition for SRID does not specify the mandatory (EPSG) projection parameter.The spatial reference system definition for SRID %u does not specify the mandatory %s (EPSG %u) projection parameter
 
 * OceanBase 错误码：7218
 * SQLSTATE：SR003
 * 错误原因：SRID %u 的空间参考系统定义未指定强制性 %s (EPSG %u) 投影参数。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：There\'s no spatial reference system with SRID.There\'s no spatial reference system with SRID %u
 
@@ -472,11 +576,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：01000
 * 错误原因：没有 SRID %u 的空间参考系统。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which is not Cartesian.Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which is not Cartesian
 
 * OceanBase 错误码：7220
 * SQLSTATE：22S00
 * 错误原因：函数 %s 仅为笛卡尔空间参考系统定义，但其参数之一在 SRID %u 中，这不是笛卡尔空间参考系统。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Function is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID, which has not been defined.Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which has not been defined
 
@@ -484,11 +598,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR001
 * 错误原因：函数 %s 仅为笛卡尔空间参考系统定义，但其参数之一在尚未定义的 SRID %u 中。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：There\'s no spatial reference system with SRID.There\'s no spatial reference system with SRID %u
 
 * OceanBase 错误码：7222
 * SQLSTATE：SR001
 * 错误原因：没有 SRID %u 的空间参考系统。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：There\'s no spatial reference system with SRID. The axis order is unknown.There\'s no spatial reference system with SRID %u. The axis order is unknown
 
@@ -496,11 +620,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：01000
 * 错误原因：没有 SRID %u 的空间参考系统。轴顺序未知。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：It has not been implemented for geographic spatial reference systems.%.192s(%.80s) has not been implemented for geographic spatial reference systems
 
 * OceanBase 错误码：7224
 * SQLSTATE：22S00
 * 错误原因：%s(%s) 尚未针对地理空间参考系统实施。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The SRID of the geometry does not match the SRID of the column. The SRID of the geometry is %lu, but the SRID of the column is %lu. Consider changing the SRID of the geometry or the SRID property of the column
 
@@ -508,11 +642,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：几何的 SRID 与列 '%s' 的 SRID 不匹配。几何的 SRID 是 %lu，但列的 SRID 是 %lu。考虑更改几何的 SRID 或列的 SRID 属性。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The SRID specification on the column cannot be changed because there is a spatial index on the column.The SRID specification on the column \'%.64s\' cannot be changed because there is a spatial index on the column. Please remove the spatial index before altering the SRID specification
 
 * OceanBase 错误码：7226
 * SQLSTATE：HY000
 * 错误原因：无法更改列 '%s' 上的 SRID 规范，因为该列上有空间索引。请在更改 SRID 规范之前删除空间索引。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The spatial index on column will not be used by the query optimizer since the column does not have an SRID attribute.The spatial index on column \'%.64s\' will not be used by the query optimizer since the column does not have an SRID attribute. Consider adding an SRID attribute to the column
 
@@ -520,11 +664,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：查询优化器不会使用列“%s”上的空间索引，因为该列没有 SRID 属性。考虑将 SRID 属性添加到列中。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Function is only defined for SRID 0 and SRID 4326.Function %.192s is only defined for SRID 0 and SRID 4326
 
 * OceanBase 错误码：7228
 * SQLSTATE：22S00
 * 错误原因：函数 %s 仅为 SRID 0 和 SRID 4326 定义。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：It has not been implemented for Cartesian spatial reference systems.%.192s(%.80s) has not been implemented for Cartesian spatial reference systems
 
@@ -532,11 +686,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22S00
 * 错误原因：%s(%s) 尚未针对笛卡尔空间参考系统实现。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：It has not been implemented for projected spatial reference systems.%.192s(%.80s) has not been implemented for projected spatial reference systems
 
 * OceanBase 错误码：7230
 * SQLSTATE：22S00
 * 错误原因：%s(%s) 尚未针对投影空间参考系统实施。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Missing mandatory attribute.Missing mandatory attribute %s
 
@@ -544,11 +708,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR006
 * 错误原因：缺少强制属性 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Multiple definitions of attribute.Multiple definitions of attribute %s
 
 * OceanBase 错误码：7232
 * SQLSTATE：SR006
 * 错误原因：属性 %s 的多个定义。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The spatial reference system name can\'t be an empty string or start or end with whitespace
 
@@ -556,11 +730,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR006
 * 错误原因：空间参考系统名称不能为空字符串，也不能以空格开头或结尾。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The organization name can\'t be an empty string or start or end with whitespace
 
 * OceanBase 错误码：7234
 * SQLSTATE：SR006
 * 错误原因：组织名称不能为空字符串，也不能以空格开头或结尾。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：There is already a spatial reference system with SRID.There is already a spatial reference system with SRID %u
 
@@ -568,11 +752,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR004
 * 错误原因：已经存在 SRID 为 %u 的空间参考系统。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：There is already a spatial reference system with SRID.There is already a spatial reference system with SRID %u
 
 * OceanBase 错误码：7236
 * SQLSTATE：01S00
 * 错误原因：已经存在 SRID 为 %u 的空间参考系统。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：SRID 0 is not modifiable
 
@@ -580,11 +774,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR000
 * 错误原因：SRID 0 不可修改。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The SRID range has been reserved for system use. SRSs in this range may be added, modified or removed without warning during upgrade.The SRID range [%u, %u] has been reserved for system use. SRSs in this range may be added, modified or removed without warning during upgrade
 
 * OceanBase 错误码：7238
 * SQLSTATE：01S01
 * 错误原因：SRID 范围 [%u, %u] 已保留供系统使用。在升级过程中，可能会在没有警告的情况下添加、修改或删除此范围内的 SRS。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Can\'t modify SRID. There is at least one column depending on it.Can\'t modify SRID %u. There is at least one column depending on it
 
@@ -592,11 +796,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR005
 * 错误原因：无法修改 SRID %u。至少有一列取决于它。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Invalid character in attribute.Invalid character in attribute %s
 
 * OceanBase 错误码：7240
 * SQLSTATE：SR006
 * 错误原因：属性 %s 中的字符无效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Attribute is too long.Attribute %s is too long. The maximum length is %u characters
 
@@ -604,11 +818,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR006
 * 错误原因：属性 %s 太长。最大长度为 %u 个字符。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Function is only defined for geographic spatial reference systems, but one of its arguments is in SRID, which is not geographic.Function %s is only defined for geographic spatial reference systems, but one of its arguments is in SRID %u, which is not geographic
 
 * OceanBase 错误码：7242
 * SQLSTATE：22S00
 * 错误原因：函数 %s 仅为地理空间参考系统定义，但其参数之一在 SRID %u 中，这不是地理。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Function encountered a polygon that was too large. Polygons must cover less than half the planet.Function %s encountered a polygon that was too large. Polygons must cover less than half the planet
 
@@ -616,11 +840,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22023
 * 错误原因：函数 %s 遇到一个太大的多边形。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Spatial indexes can\'t be primary or unique indexes
 
 * OceanBase 错误码：7244
 * SQLSTATE：HY000
 * 错误原因：空间索引不能是主索引或唯一索引。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The index type is not supported for spatial indexes.The index type %.20s is not supported for spatial indexes
 
@@ -628,11 +862,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：空间索引不支持索引类型 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：A parameter of function contains a geometry with longitude, which is out of range.A parameter of function %.192s contains a geometry with longitude %f, which is out of range. It must be within (%f, %f]
 
 * OceanBase 错误码：7246
 * SQLSTATE：22S02
 * 错误原因：函数 %s 的参数包含经度为 %f 的几何图形，超出范围。它必须在  (%f, %f]  之内。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：A parameter of function contains a geometry with latitude, which is out of range.A parameter of function %.192s contains a geometry with latitude %f, which is out of range. It must be within [%f, %f]
 
@@ -640,11 +884,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22S03
 * 错误原因：函数 %s 的参数包含纬度为 %f 的几何图形，超出范围。它必须在 [%f, %f] 之内。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The spatial reference system definition for SRID specifies invalid geographic axes. One axis must be NORTH or SOUTH and the other must be EAST or WEST.he spatial reference system definition for SRID %u specifies invalid geographic axes \'%.20s\' and \'%.20s\'. One axis must be NORTH or SOUTH and the other must be EAST or WEST
 
 * OceanBase 错误码：7248
 * SQLSTATE：SR002
 * 错误原因：SRID %u 的空间参考系统定义指定了无效的地理轴“%s”和“%s”。一个轴必须是 NORTH 或 SOUTH，另一个必须是 EAST 或 WEST。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The spatial reference system definition for SRID specifies invalid geographic axes. One axis must be NORTH or SOUTH and the other must be EAST or WEST.he spatial reference system definition for SRID %u specifies invalid geographic axes \'%.20s\' and \'%.20s\'. One axis must be NORTH or SOUTH and the other must be EAST or WEST
 
@@ -652,11 +906,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR002
 * 错误原因：SRID %u 的空间参考系统定义指定了无效的地理轴“%s”和“%s”。一个轴必须是 NORTH 或 SOUTH，另一个必须是 EAST 或 WEST。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The inverse flattening must be larger than 1.0, or 0.0 if the ellipsoid is a sphere
 
 * OceanBase 错误码：7250
 * SQLSTATE：SR002
 * 错误原因：逆展平必须大于 1.0，如果椭圆体是球体，则为 0.0。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The angular unit conversion factor must be a positive number
 
@@ -664,11 +928,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR002
 * 错误原因：角度单位转换因子必须是正数。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：The prime meridian must be within (*180, 180] degrees, specified in the SRS angular unit
 
 * OceanBase 错误码：7252
 * SQLSTATE：SR002
 * 错误原因：本初子午线必须在 (*180, 180] 度内，以 SRS 角度单位指定。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Transformation from SRID is not supported.Transformation from SRID %u is not supported
 
@@ -676,11 +950,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22S00
 * 错误原因：不支持来自 SRID %u 的转换。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Transformation to SRID is not supported.Transformation to SRID %u is not supported
 
 * OceanBase 错误码：7254
 * SQLSTATE：22S00
 * 错误原因：不支持转换为 SRID %u。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Transformation from SRID %u is not supported. The spatial reference system has no TOWGS84 clause
 
@@ -688,11 +972,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22S00
 * 错误原因：不支持来自 SRID %u 的转换。空间参考系统没有 TOWGS84 子句。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Transformation to SRID %u is not supported. The spatial reference system has no TOWGS84 clause
 
 * OceanBase 错误码：7256
 * SQLSTATE：22S00
 * 错误原因：不支持转换为 SRID %u。空间参考系统没有 TOWGS84 子句。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Cannot create a functional index on a function that returns a JSON or GEOMETRY value
 
@@ -700,11 +994,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：42000
 * 错误原因：无法在返回 JSON 或 GEOMETRY 值的函数上创建函数索引。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Spatial functional index is not supported
 
 * OceanBase 错误码：7258
 * SQLSTATE：HY000
 * 错误原因：不支持空间功能索引。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The geometry passed to function is in SRID 0, which doesn\'t specify a length unit. Can\'t convert.The geometry passed to function %s is in SRID 0, which doesn\'t specify a length unit. Can\'t convert to \'%s\'
 
@@ -712,11 +1016,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SU001
 * 错误原因：传递给函数 %s 的几何在 SRID 0 中，它没有指定长度单位，无法转换为“%s”。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Invalid cast.Invalid cast from %s to %s
 
 * OceanBase 错误码：7260
 * SQLSTATE：22S01
 * 错误原因：从 %s 到 %s 的转换无效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Invalid cast. A polygon ring is in the wrong direction.Invalid cast from %s to %s. A polygon ring is in the wrong direction
 
@@ -724,11 +1038,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22S04
 * 错误原因：从 %s 到 %s 的转换无效。多边形环的方向错误。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Arguments to function contains geometries with different SRIDs. All geometries must have the same SRID.Arguments to function %s contains geometries with different SRIDs: %u and %u. All geometries must have the same SRID
 
 * OceanBase 错误码：7262
 * SQLSTATE：22S05
 * 错误原因：函数 %s 的参数包含具有不同 SRID 的几何图形 %u 和 %u。所有几何图形必须具有相同的 SRID。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Longitude is out of range in function.Longitude %f is out of range in function %.192s. It must be within (%f, %f]
 
@@ -736,11 +1060,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22S02
 * 错误原因：经度 %f 超出函数 %s 的范围。它必须在 (%f, %f] 之内。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Latitude is out of range in function.Latitude %f is out of range in function %.192s. It must be within [%f, %f]
 
 * OceanBase 错误码：7264
 * SQLSTATE：22S03
 * 错误原因：纬度 %f 超出函数 %s 的范围。它必须在 [%f, %f] 之内。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Memory allocation error.Memory allocation error: %*.256s in function %s
 
@@ -748,11 +1082,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：内存分配错误：函数 %s 中的 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Domain error.Domain error: %*.256s in function %s
 
 * OceanBase 错误码：7266
 * SQLSTATE：HY000
 * 错误原因：域错误，函数 %s 中的 %s。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Length error.Length error: %*.256s in function %s
 
@@ -760,11 +1104,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：长度错误，函数 %s 中的 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Invalid argument error.Invalid argument error: %*.256s in function %s
 
 * OceanBase 错误码：7268
 * SQLSTATE：HY000
 * 错误原因：无效参数错误，函数 %s 中的 %s。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Out of range error.Out of range error: %*.256s in function %s
 
@@ -772,11 +1126,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：超出范围错误，函数 %s 中的 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Overflow error.Overflow error: %*.256s in function %s
 
 * OceanBase 错误码：7270
 * SQLSTATE：HY000
 * 错误原因：溢出错误，函数 %s 中的 %s。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Range error.Range error: %*.256s in function %s
 
@@ -784,11 +1148,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：范围错误，函数 %s 中的 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Underflow error.Underflow error: %*.256s in function %s
 
 * OceanBase 错误码：7272
 * SQLSTATE：HY000
 * 错误原因：下溢错误，函数 %s 中的 %s。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Logic error.Logic error: %*.256s in function %s
 
@@ -796,11 +1170,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：逻辑错误，函数 %s 中的 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Runtime error.Runtime error: %*.256s in function %s
 
 * OceanBase 错误码：7274
 * SQLSTATE：HY000
 * 错误原因：运行时错误，函数 %s 中的 %s。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Unknown exception: %*.384s in function %s
 
@@ -808,11 +1192,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：未知异常 函数 %s 中的 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Cannot get geometry object from data you send to the GEOMETRY field
 
 * OceanBase 错误码：7276
 * SQLSTATE：22003
 * 错误原因：无法从您发送到 GEOMETRY 字段的数据中获取几何对象。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Incorrect usage of srid, srid column attribute only support in geometry
 
@@ -820,11 +1214,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：Srid 的使用不正确，Srid 列属性仅在几何体中支持。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Incorrect usage of spatial/fulltext/hash index and explicit index order
 
 * OceanBase 错误码：7278
 * SQLSTATE：HY000
 * 错误原因：空间/全文/哈希索引和显式索引顺序的使用不正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：A SPATIAL index may only contain a geometrical type column
 
@@ -832,11 +1236,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：42000
 * 错误原因：SPATIAL 索引可能只包含几何类型的列。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：All parts of a SPATIAL index must be NOT NULL
 
 * OceanBase 错误码：7280
 * SQLSTATE：42000
 * 错误原因：SPATIAL 索引的所有部分都必须为 NOT NULL。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The index type is not supported for spatial indexes.The index type %s is not supported for spatial indexes
 
@@ -844,11 +1258,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：HY000
 * 错误原因：空间索引不支持索引类型 %s。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：There\'s no unit of measure.There\'s no unit of measure named \'%s\'
 
 * OceanBase 错误码：7282
 * SQLSTATE：SU001
 * 错误原因：没有名为 "%s" 的度量单位。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：The string is not a valid key value pair in function.The string \'%.192s\' is not a valid key %c value pair in function %.192s
 
@@ -856,11 +1280,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22023
 * 错误原因：字符串 '%s' 不是函数 %s 中的有效键 %c 值对。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Invalid radius provided to function: Radius must be greater than zero.Invalid radius provided to function %s: Radius(%lf) must be greater than zero
 
 * OceanBase 错误码：7284
 * SQLSTATE：22023
 * 错误原因：提供给函数 %s 的半径无效：半径必须大于零。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Spatial reference system is empty
 
@@ -868,11 +1302,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：SR001
 * 错误原因：没有 SRID %u 的空间参考系统。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Invalid option key in function.Invalid option key \'%.192s\' in function %.192s
 
 * OceanBase 错误码：7286
 * SQLSTATE：22023
 * 错误原因：函数 %s 中的选项键“%s”无效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-00600：Invalid value for option in function.Invalid value \'%.192s\' for option \'%.192s\' in function \'%.192s\'
 
@@ -880,11 +1324,21 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * SQLSTATE：22023
 * 错误原因：函数“%s”中的选项“%s”的值“%s”无效。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-00600：Unknown WKB type.Unknown WKB type(%d)! Full WKB type number was (%d)
 
 * OceanBase 错误码：7288
 * SQLSTATE：22S01
 * 错误原因：%s 值是 %s 中意外类型 %s 的几何图形。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ORA-00603：Prepare statement checksum error
 ---------------------------------------------------------------
@@ -908,8 +1362,7 @@ ORA-00900：invalid SQL statement
 
 * 解决方法：请参考您的 OceanBase 数据库对应版本的《SQL 参考（Oracle 模式）》查找正确的 SQL 语句。
 
-ORA-00900：You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for theright syntax to use
------------------------------------------------------------------------------------------------------------------------------------------------------------
+# ORA-00900：You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for theright syntax to use
 
 * OceanBase 错误码：5006
 
@@ -918,6 +1371,10 @@ ORA-00900：You have an error in your SQL syntax; check the manual that correspo
 * 错误原因：SQL 语句存在错误。
 
 * 解决方法：请参考您的 OceanBase 数据库对应版本的《SQL 参考（Oracle 模式）》查找正确的 SQL 语句。
+
+相关问题处理 KB：
+
+  [Oracle 租户中创建带 RANGE 或 LIST 类型分区的表组错误，错误代码 ORA-00900](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000174?back=kb)
 
 ORA-00902：invalid datatype
 -----------------------------------------------
@@ -964,6 +1421,11 @@ ORA-00904：'%.\*s': invalid identifier
 
 * 错误原因：字符串中含有无效标识符。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-00905：missing keyword
 ----------------------------------------------
 
@@ -1002,6 +1464,18 @@ ORA-00913：too many values
 
 * 错误原因：值太多。
 
+## ORA-00917：missing comma
+
+* OceanBase 错误码：7403
+* SQLSTATE：42000
+* 错误原因：在 INSERT 语句或形式为 ((C,D),(E,F), ...) 的列或值列表中省略了所需的逗号。
+* 解决方法：请更正语法。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ORA-00918：column '%.\*s' in %.\*%s ambiguously defined
 -------------------------------------------------------------------------
 
@@ -1021,6 +1495,11 @@ ORA-00925：missing INTO keyword
 * 错误原因：执行 INSERT 语句时缺失关键词 INTO。
 
 * 解决方式：添加缺少的 INTO 关键字并重新执行该语句。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-00926：missing VALUES keyword
 -----------------------------------------------------
@@ -1094,8 +1573,7 @@ ORA-00939：too many arguments for function
 
 * 错误原因：函数参数太多。
 
-ORA-00942：table or view \\'%s.%s\\'does not exist
-----------------------------------------------------------------------
+## ORA-00942：table or view \\'%s.%s\\'does not exist
 
 * OceanBase 错误码：5019
 
@@ -1105,8 +1583,11 @@ ORA-00942：table or view \\'%s.%s\\'does not exist
 
 * 解决方式：检查您的 SQL 拼写。特别地，对于OceanBase V2.2.70 以后的版本，检查当前角色的权限。
 
-ORA-00942：table or view '%.\*s' does not exist
--------------------------------------------------------------------
+相关问题处理 KB：
+
+  [OBServer 重启失败，错误代码 5019](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000042?back=kb)
+
+## ORA-00942：table or view '%.\*s' does not exist
 
 * OceanBase 错误码：5201
 
@@ -1115,6 +1596,11 @@ ORA-00942：table or view '%.\*s' does not exist
 * 错误原因：表或视图不存在。对于 OceanBase V2.2.70 以后的版本，由于新增了角色权限，如果当前角色不具有某些表或视图的 `SELECT` 权限，也会返回这个错误。
 
 * 解决方式：检查您的 SQL 拼写。特别地，对于OceanBase V2.2.70 以后的版本，检查当前角色的权限。
+
+相关问题处理 KB：
+
+* [PL 权限不足，错误代码 ORA-00942](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000001050?back=kb)
+* [Oracle 模式下普通用户无法通过 dbms_metadata.get_ddl() 获取对象的 DDL，错误代码 ORA-00942](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000169?back=kb)
 
 ORA-00947：not enough values
 ------------------------------------------------
@@ -1159,6 +1645,11 @@ ORA-00959：tablespace '%.\*s' does not exist
 * 错误原因：表名不在 FROM 列表中。
 * 解决方法：确认输入的名字是一个正确的表名，并且在 From 列表中。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ORA-00969：missing ON keyword
 -------------------------------------------------
 
@@ -1176,9 +1667,9 @@ long
 
 * SQLSTATE：42000
 
-* 错误原因：指定的标识符超过限制要求。
+* 错误原因：指定的标识符超过 128 个字节，或者指定的密码标识符超过 30 个字节。
 
-* 解决方法：请将指定标识符的字节数设置在限制范围内。
+* 解决方法：指定最多 128 个字节的标识符，最多 30 个字节的密码标识符。
 
 ORA-00976：Specified pseudo column or operator not allowed here
 -----------------------------------------------------------------------------------
