--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-10000 ~ ORA-19999
-===========================================
+# ORA-10000 ~ ORA-19999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -424,6 +423,11 @@ ORA-14109：partition-extended object names may only be used with tables and edi
 
 * 解决方法：避免对非表或编辑视图的对象使用分区扩展名称语法。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-14159：duplicate subpartition name
 ----------------------------------------------------------
 
@@ -519,6 +523,11 @@ ORA-14300：partitioning key maps to a partition outside maximum permitted numbe
 
 * 解决方法：确保分区键映射的分区数或子分区数位于 `1048575` 内。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-14308：partition bound element must be one of: string, datetime or interval literal, number, or NULL
 ----------------------------------------------------------------------------------------------------------------------------
 
@@ -569,6 +578,11 @@ ORA-14312：invalid time limit specified
 * SQLSTATE：42000
 * 错误原因：DEFAULT 分区必须是最后指定的分区。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ORA-14400：inserted partition key does not map to any partition
 -----------------------------------------------------------------------------------
 
@@ -617,6 +631,11 @@ ORA-14551：cannot perform a DML operation inside a query
 
 * 解决方式：确保不执行有问题的 DML 操作，或使用自治事务在查询或 PDML 从站内执行 DML 操作。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-14552：cannot perform a DDL commit or rollback inside a query or DML tips
 --------------------------------------------------------
 
@@ -627,6 +646,11 @@ ORA-14552：cannot perform a DDL commit or rollback inside a query or DML tips
 * 错误原因：DDL 操作（如：创建表、视图等）和事务控制语句（如：提交/回滚）不能在查询或 DML 语句中执行。
 
 * 解决方式：确保不执行违规操作或使用自治事务在查询或 DML 操作中执行操作。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-14750：Range partitioned table with INTERVAL clause has more than one column
 ----------------------------------------------------------------------------------------------------
@@ -639,6 +663,11 @@ ORA-14750：Range partitioned table with INTERVAL clause has more than one colum
 
 * 解决方式：使用单个分区列。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-14751：Invalid data type for partitioning column of an interval partitioned table
 ---------------------------------------------------------------------------------------------------------
 
@@ -649,6 +678,11 @@ ORA-14751：Invalid data type for partitioning column of an interval partitioned
 * 错误原因：对数据类型不是 number 或 date/time 的分区表使用间隔分区。
 
 * 解决方式：仅使用 number 或 date/time 列作为间隔分区表的分区列。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-14752：Interval expression is not a constant of the correct type
 ----------------------------------------------------------------------------------------
@@ -661,6 +695,11 @@ ORA-14752：Interval expression is not a constant of the correct type
 
 * 解决方式：仅对间隔使用常量表达式。如果分区列的数据类型是数字，则间隔必须是数字常量。如果数据类型为日期/时间类型，则间隔必须是间隔类型的常量。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-14753：Interval cannot be zero
 ------------------------------------------------------
 
@@ -671,6 +710,11 @@ ORA-14753：Interval cannot be zero
 * 错误原因：间隔映射为 0。
 
 * 解决方式：使用非零间隔。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-14757：Table is already a range partitioned table
 -------------------------------------------------------------------------
@@ -683,6 +727,11 @@ ORA-14757：Table is already a range partitioned table
 
 * 解决方式：仅在间隔分区表上使用 `SET INTERVAL（）`。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-14758：Last partition in the range section cannot be dropped
 ------------------------------------------------------------------------------------
 
@@ -694,6 +743,11 @@ ORA-14758：Last partition in the range section cannot be dropped
 
 * 解决方式：不要删除间隔分区表中的最后一个 RANGE 分区。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-14759：SET INTERVAL is not legal on this table
 ----------------------------------------------------------------------
 
@@ -704,6 +758,11 @@ ORA-14759：SET INTERVAL is not legal on this table
 * 错误原因：指定了 `SET INTERVAL` 子句。`ALTER TABLE SET INTERVAL` 仅适用于具有单个分区列的 `RANGE` 分区表。此外，此分区表不能指定 `MAXVALUE` 分区。
 
 * 解决方式：仅在有效表上使用 `SET INTERVAL`。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-14760：ADD PARTITION is not permitted on Interval partitioned objects
 ---------------------------------------------------------------------------------------------
