--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/3.ora-01000-to-ora-01499-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/3.ora-01000-to-ora-01499-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-01000 ~ ORA-01499
-===========================================
+# ORA-01000 ~ ORA-01499
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -63,6 +62,11 @@ ORA-01003：no statement parsed
 
 * 解决方法：将 DBMS_SQL PARSE 的语句类型修改为 `SELECT` 语句。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-01006：bind variable does not exist
 -----------------------------------------------------------
 
@@ -80,6 +84,11 @@ ORA-01006：bind variable does not exist
 * SQLSTATE：HY000
 * 错误原因：变量不在选择列表中。
 * 解决方式：需要您查看输入的 SQL 语句是否正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ORA-01008：not all variables bound
 ------------------------------------------------------
@@ -108,8 +117,7 @@ ORA-01017：invalid username/password; logon denied
 
 * 错误原因：用户名/密码无效，登录被拒绝。
 
-ORA-01031：insufficient privileges
-------------------------------------------------------
+## ORA-01031：insufficient privileges
 
 * OceanBase 错误码：5360
 
@@ -118,6 +126,10 @@ ORA-01031：insufficient privileges
 * 错误原因：执行数据库操作，但是并不具备所需的权限。
 
 * 解决方式：请联系数据库管理员或指定的安全管理员为您授予所需的权限。
+
+相关问题处理 KB：
+
+* [创建表失败，错误代码 5360/ORA-01031](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000001004?back=kb)
 
 ORA-01045：user %.\*s lacks CREATE SESSION privilege; logon denied
 --------------------------------------------------------------------------------------
@@ -181,6 +193,11 @@ ORA-01402：view WITH CHECK OPTION where-clause violation
 
 * 解决方法：`INSERT` 向视图插入的数据，或 `UPDATE` 更新后的数据必须满足视图定义中的 `where` 条件。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-01403：no data found
 --------------------------------------------
 
@@ -202,6 +219,11 @@ ORA-01405：fetched column value is NULL
 * 错误原因：ANYTYPE SETINFO 存储过程调用中 `elem_count` 被设置为 `NULL`。
 
 * 解决方法：禁止将 `elem_count` 设置为 `NULL`。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-01408：such column list already indexed
 ---------------------------------------------------------------
