--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/4.ora-01500-to-ora-01999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/4.ora-01500-to-ora-01999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-01500 ~ ORA-01999
-===========================================
+# ORA-01500 ~ ORA-01999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -17,8 +16,7 @@ ORA-01543：tablespace '%.\*s' already exists
 
 * 解决方法：使用其他名称创建新表空间。
 
-ORA-01555：snapshot too old
------------------------------------------------
+## ORA-01555：snapshot too old
 
 * OceanBase 错误码：4138
 
@@ -27,6 +25,11 @@ ORA-01555：snapshot too old
 * 错误原因：读取器进行一致性读所需的回滚记录被其他编写器覆盖。
 
 * 解决方法：请修改 undo_retention 值，以增加回滚记录范围。
+
+相关问题处理 KB：
+
+* [转储错误，错误代码 4138/ORA-01555](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000158?back=kb)
+* [OMS 全量数据迁移错误，错误代码 ORA-01555](https://www.oceanbase.com/knowledge-base/oms-ee-20000000012?back=kb)
 
 ORA-01700：duplicate username in list
 ---------------------------------------------------------
@@ -243,12 +246,22 @@ ORA-01741：illegal zero-length identifier
 * 错误原因：试图使用两个双引号 ("") 作为标识符。标识符必须至少有一个字符长。
 * 解决方法：在标识符的双引号之间插入至少一个字符。如果需要空白标识符，请在双引号 (" ") 之间指定一个空格。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-01747：invalid user.table.column, table.column, or column specification
 
 * OceanBase 错误码：5457
 * SQLSTATE：42000
 * 错误原因：无效的 user.table.column、table.column 或列规范。
 * 解决方法：更正并重新发出命令。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ORA-01743：only pure functions can be indexed
 -----------------------------------------------------------------
@@ -580,14 +593,17 @@ ORA-01821：date format not recognized, %s=%d must between %d and %d
 
 * 解决方法：无法识别的日期格式，`%s=%d` 必须在 `%d` 和 `%d` 之间。
 
-ORA-01830：date format picture ends before converting entire input string
----------------------------------------------------------------------------------------------
+## ORA-01830：date format picture ends before converting entire input string
 
 * OceanBase 错误码：4190
 
 * SQLSTATE：22007
 
 * 错误原因：日期格式图片在转换整个输入字符串之前结束。
+
+相关问题处理 KB：
+
+  [日期格式与传参不一致，错误代码 ORA-01830](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000164?back=kb)
 
 ORA-01831：year conflicts with Julian date
 --------------------------------------------------------------
@@ -688,14 +704,17 @@ ORA-01842：quarter must be between 1 and 4
 
 * 错误原因：季度必须介于 `1` \~ `4`。
 
-ORA-01843：not a valid month
-------------------------------------------------
+## ORA-01843：not a valid month
 
 * OceanBase 错误码：5641
 
 * SQLSTATE：HY000
 
 * 错误原因：不是有效的月份。
+
+相关问题处理 KB：
+
+  [更新表错误，错误代码 5641/ORA-01843](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000197?back=kb)
 
 ORA-01846：not a valid day of the week
 ----------------------------------------------------------
