--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-20000 ~ ORA-29999
-===========================================
+# ORA-20000 ~ ORA-29999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -59,6 +58,11 @@ ORA-22369：invalid parameter encountered in method %s
 
 * 解决方法：检查传递的参数，并确保这些参数是允许的。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-22370：incorrect usage of method %s
 -----------------------------------------------------------
 
@@ -69,6 +73,11 @@ ORA-22370：incorrect usage of method %s
 * 错误原因：`SYS.任何类型`、`SYS.任何数据` or `SYS.任意数据集` 被不当使用。
 
 * 解决方法：采用正确用法。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-22625：OCIAnyData is not well-formed
 ------------------------------------------------------------
@@ -81,6 +90,11 @@ ORA-22625：OCIAnyData is not well-formed
 
 * 解决方法：在添加属性之前，请使用 `OCIAnyDataBeginConstruct` 初始化句柄。使用 `OCIAnyDataEndConstruct` 完成构造。或者使用 `OCIAny-DataConvert` 进行构造。在访问属性之前，请确保它已正确构造。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-22626：Type Mismatch while constructing or accessing OCIAnyData
 ---------------------------------------------------------------------------------------
 
@@ -92,6 +106,11 @@ ORA-22626：Type Mismatch while constructing or accessing OCIAnyData
 
 * 解决方法：确保提供的类型与要构造或访问的对象的类型匹配。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-22627：tc \[%s\] must be that of object/varray/nested table
 -----------------------------------------------------------------------------------
 
@@ -102,6 +121,11 @@ ORA-22627：tc \[%s\] must be that of object/varray/nested table
 * 错误原因：类型代码不是 object/varray/nested 表的类型代码。
 
 * 解决方法：确保类型代码是 `OCI_TYPECODE_OBJECT` 或 `OCI_TYPECODE_VARRAY` 或 `OCI_TYPECODE_TABLE`。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ORA-22806：not an object or REF
 
@@ -121,17 +145,32 @@ ORA-22816：unsupported feature with RETURNING clause
 
 * 解决方式：使用单独的语句来获取值。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ORA-22903：MULTISET expression not allowed
 
 * OceanBase 错误码：9716
 * SQLSTATE：HY000
 * 错误原因：不允许使用 MULTISET 表达式。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-22907：invalid CAST to a type that is not a nested table or VARRAY
 
 * OceanBase 错误码：9717
 * SQLSTATE：HY000
 * 错误原因：不是嵌套表或 VARRAY 类型的无效 CAST。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ORA-22928：invalid privilege on directories
 ---------------------------------------------------------------
@@ -185,6 +224,11 @@ ORA-24234：unable to get source of string \\'%.\*s\\'.\\'%.\*s\\', insufficient
 
 * 解决方法：确保指定的对象存在，并且具有查看其源所需的权限。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-24235：bad value for object type: %.\*s
 ---------------------------------------------------------------
 
@@ -196,6 +240,11 @@ ORA-24235：bad value for object type: %.\*s
 
 * 解决方法：确保指定的对象类型是以下类型之一：包、包体、过程、函数、触发器、类型和类型体。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-24236：source text is empty
 ---------------------------------------------------
 
@@ -206,6 +255,11 @@ ORA-24236：source text is empty
 * 错误原因：提供给 `DBMS_PREPROCESSOR` 子程序的输入源文本为空。
 
 * 解决方法：传递非空输入源文本作为输入。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-24334：no descriptor for this position
 --------------------------------------------------------------
@@ -292,6 +346,11 @@ ORA-24761：transaction rolled back: transaction idle timeout
 
 * 错误原因：事务回滚，事务超时。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-24761：transaction rolled back: transaction context count reach limit
 ---------------------------------------------------------------------------------------------
 
@@ -356,6 +415,11 @@ ORA-25021 : cannot reference a trigger defined on another table
 
 * 解决方式：在同一张表上创建引用的触发器。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-25022 : cannot reference a trigger of a different type
 ----------------------------------------------------------------------------------------
 
@@ -366,6 +430,11 @@ ORA-25022 : cannot reference a trigger of a different type
 * 错误原因：FOLLOWS 或 PRECEDES 子句中引用的触发器是不同的类型或不是组合触发器。
 
 * 解决方式：将引用的触发器创建为相同类型或组合触发器。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-25023 : Cyclic trigger dependency is not allowed
 ----------------------------------------------------------------------------------------
@@ -378,6 +447,11 @@ ORA-25023 : Cyclic trigger dependency is not allowed
 
 * 解决方式：不要创建可以形成循环依赖的触发器。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-25025 : cannot specify PRECEDES clause
 ----------------------------------------------------------------------------------------
 
@@ -388,6 +462,11 @@ ORA-25025 : cannot specify PRECEDES clause
 * 错误原因：创建常规触发器时指定了 PRECEDES 子句。
 
 * 解决方式：不要创建带有 PRECEDES 子句的常规触发器。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-25128：No insert/update/delete on table with constraint disabled and validated
 ------------------------------------------------------------------------------------------------------
@@ -471,11 +550,21 @@ ORA-28001：the password has expired
 * 错误原因：策略已存在。
 * 解决方法：检查是否已添加策略或使用不同的策略名称。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28102：policy does not exist
 
 * OceanBase 错误码：9719
 * SQLSTATE：HY000
 * 错误原因：策略不存在。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28103：adding a policy to an object owned by SYS is not allowed
 
@@ -484,6 +573,11 @@ ORA-28001：the password has expired
 * 错误原因：不允许向 SYS 拥有的对象添加策略。
 * 解决方法：您不能执行此操作。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28104：input value for %s is not valid
 
 * OceanBase 错误码：9721
@@ -491,17 +585,32 @@ ORA-28001：the password has expired
 * 错误原因：参数的输入值无效。
 * 解决方法：请指定一个有效的参数值。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28105：cannot create security relevant column policy in an object view
 
 * OceanBase 错误码：9722
 * SQLSTATE：HY000
 * 错误原因：无法在对象视图中创建与安全相关的列策略。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28106：input value for argument %s is not valid
 
 * OceanBase 错误码：9723
 * SQLSTATE：HY000
 * 错误原因：参数的输入值无效或丢失。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28107：policy was disabled
 
@@ -510,11 +619,21 @@ ORA-28001：the password has expired
 * 错误原因：策略已禁用。
 * 解决方法：若强制执行该策略，则必须启用它。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28108：circular security policies detected
 
 * OceanBase 错误码：9725
 * SQLSTATE：HY000
 * 错误原因：对同一对象的策略相互引用。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28109：the number of related policies has exceeded the limit of 16
 
@@ -523,6 +642,11 @@ ORA-28001：the password has expired
 * 错误原因：同一对象涉及的策略过多。
 * 解决方法：放弃一项或多项策略。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28110：policy function or package %.*s.%.*s has error
 
 * OceanBase 错误码：9727
@@ -530,11 +654,21 @@ ORA-28001：the password has expired
 * 错误原因：策略函数或包有误，已被删除或不在有效。
 * 解决方法：检查功能的状态并更正问题。或者重新创建具有有效功能的策略。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28111：insufficient privilege to evaluate policy predicate
 
 * OceanBase 错误码：9728
 * SQLSTATE：HY000
 * 错误原因：策略函数的所有者无权访问的对象。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28112：failed to execute policy function
 
@@ -542,17 +676,32 @@ ORA-28001：the password has expired
 * SQLSTATE：HY000
 * 错误原因：无法执行策略功能。策略函数在执行过程中出现一处或多处错误。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28113：policy predicate has error
 
 * OceanBase 错误码：9730
 * SQLSTATE：HY000
 * 错误原因：策略谓词有错误。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28116：insufficient privileges to do direct path access
 
 * OceanBase 错误码：9731
 * SQLSTATE：HY000
 * 错误原因：权限不足，无法进行直接路径访问。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28117：integrity constraint violated * parent record not found
 
@@ -561,11 +710,21 @@ ORA-28001：the password has expired
 * 错误原因：违反了完整性约束，找不到父记录。
 * 解决方法：确保更新后的外键值也必须在父级中可见。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28118：policy group already exists
 
 * OceanBase 错误码：9733
 * SQLSTATE：HY000
 * 错误原因：策略组已存在。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28119：policy group does not exist
 
@@ -573,17 +732,32 @@ ORA-28001：the password has expired
 * SQLSTATE：HY000
 * 错误原因：策略组不存在。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28120：driving context already exists
 
 * OceanBase 错误码：9735
 * SQLSTATE：HY000
 * 错误原因：驱动上下文已存在。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28121：driving context does not exist
 
 * OceanBase 错误码：9736
 * SQLSTATE：HY000
 * 错误原因：驱动上下文不存在。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28122：can not update SYS_DEFAULT policy group
 
@@ -592,12 +766,22 @@ ORA-28001：the password has expired
 * 错误原因：无法更新 SYS_DEFAULT 策略组。
 * 解决方法：不要尝试创建或删除 SYS_DEFAULT 策略组。不允许执行此操作。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28123：Driving context %.*s,%.*s contains invalid group %.*s
 
 * OceanBase 错误码：9738
 * SQLSTATE：HY000
 * 错误原因：驱动上下文包含无效的组。
 * 解决方法：确保在初始化策略驱动上下文时将有效的策略组传递给 DBMS_SESSION.SET_CONTEXT。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28124：Column %.*s in sec_relevant_cols cannot be of an object data type
 
@@ -606,6 +790,11 @@ ORA-28001：the password has expired
 * 错误原因：`sec_relevant_cols` 中的列不能是对象数据类型。
 * 解决方法： 确保在 `sec_relevant_cols` 中指定的列都不是对象数据类型或 XMLType。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28125：A protected base column was referenced in an unprotected virtual column expression
 
 * OceanBase 错误码：9740
@@ -613,12 +802,22 @@ ORA-28001：the password has expired
 * 错误原因：在未受保护的虚拟列表达式中引用了受保护的基列。
 * 解决方法：检查策略定义并确保虚拟列也受到保护。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ## ORA-28126：Attribute association failed for policy %.*s
 
 * OceanBase 错误码：9741
 * SQLSTATE：HY000
 * 错误原因：策略的属性关联失败。
 * 解决方法：请指定一个本地应用程序上下文属性。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
 
 ## ORA-28132：The MERGE INTO syntax does not support the security policy
 
@@ -629,6 +828,11 @@ ORA-28001：the password has expired
   * 若您没有修改安全策略的权限，则在已定义安全策略的表上使用 INSERT、UPDATE 和 DELETE DML 语句，而不是 MERGE INTO。
   * 若您有权修改安全策略，则以 statement_types 包含所有 DML 语句类型（INSERT、UPDATE 和 DELETE）的方式重新定义它，或者确保该策略没有与安全相关的列。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
 ORA-28115：policy with check option violation
 -----------------------------------------------------------------
 
@@ -637,6 +841,11 @@ ORA-28115：policy with check option violation
 * SQLSTATE：HY000
 
 * 错误原因：写入数据的安全标记错误。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-28106：input value for argument #%d is not valid
 ------------------------------------------------------------------------
@@ -656,6 +865,11 @@ ORA-28264：Client identifier is too long
 
 * 错误原因：超过 Client ID 上限 64 字节。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ORA-28265：Namespace beginning with 'SYS_' is not allowed
 -----------------------------------------------------------------------------
 
@@ -664,6 +878,11 @@ ORA-28265：Namespace beginning with 'SYS_' is not allowed
 * SQLSTATE：HY000
 
 * 错误原因：创建的 `context namespace` 不能有 `'SYS_'` 前缀。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ORA-28267：The maximum size specified by the _session_context_size parameter was exceeded
 --------------------------------------------------------------------------------------------------------------
@@ -674,6 +893,11 @@ ORA-28267：The maximum size specified by the _session_context_size parameter wa
 
 * 错误原因：`session based context` 键值对个数超过了 `_session_context_size` 指定的上限。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ORA-28268：Invalid NameSpace Value
 ------------------------------------------------------
 
@@ -682,6 +906,11 @@ ORA-28268：Invalid NameSpace Value
 * SQLSTATE：HY000
 
 * 错误原因：`context namespace namespace` 名称不合法。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ORA-29253：Invalid count argument passed to procedure dbms_sql.define_array
 -----------------------------------------------------------------------------------------------
@@ -693,6 +922,11 @@ ORA-29253：Invalid count argument passed to procedure dbms_sql.define_array
 * 错误原因：在调用包 `dbms_sql` 的过程定义数组时指定的 `count` 参数的值无效。无效值为负数和空值。参数必须是正整数。
 
 * 解决方法：请更正 PL/SQL 程序，以便只传递有效参数来定义数组，然后重试。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-29257：host %.\*s unknown
 -------------------------------------------------
@@ -726,6 +960,11 @@ ORA-29295：invalid mime header tag
 * 错误原因：扫描 `mime` 头标记的字符串时出错
 
 * 解决方法：验证源数据是否为有效的 `mime` 头字符串，格式是否为 charset/encoding/encoded string。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-29357：%s %.\*s already exists
 ------------------------------------------------------
